@@ -1342,6 +1342,11 @@ public class GalleryComm2 extends GalleryComm implements GalleryComm2Consts,
 		    mConnection.setDefaultHeaders(new NVPair[] { new NVPair("User-Agent", userAgent) });
 		}
 
+		// Valiant thinks this will solve the sometines-reported problem with
+		// uploading large numbers of files.
+		NVPair[] def_hdrs = { new NVPair("Connection", "close") };
+        mConnection.setDefaultHeaders(def_hdrs);
+
 		// Markus Cozowicz (mc@austrian-mint.at) 2003/08/24
 		HTTPResponse rsp = null;
 
